--- a/onlineretail.ipynb
+++ b/onlineretail.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNlfidNYlBJx3YFLblt3+Bh",
+      "authorship_tag": "ABX9TyOFkxjY0H++zn0wnU0IH9BA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,8 +30,12 @@
       "cell_type": "markdown",
       "source": [
         "#  🛒 **E-Commerce User Behavior Segmentation using Hierarchical Clustering**\n",
-        "#Submitted by:Sharon Jacquiline S\n",
-        "#Dated on:7/9/2025\n",
+        "Submitted by:Sharon Jacquiline S\n",
+        "\n",
+        "Dated on:7/9/2025\n",
+        "\n",
+        "GitHub link:https://github.com/jacqlin13/e-commerce_analysis/blob/main/README.md#e-commerce_analysis\n",
+        "\n",
         "\n",
         "## ✈**Quick Summary**:\n",
         "\n",
